@@ -46,7 +46,10 @@ It stands for "derivative-free spectral approach for nonlinear equations". It di
 of a directional derivative at every iteration of the merit 
 function \eqn{F(x)^t F(x)}, where \eqn{F} is specified by the argument \code{fn}.
 
-R adaptation, with significant modifications, by Ravi Varadhan, Johns Hopkins University (March 25, 2008), from the original FORTRAN code of La Cruz, Martinez, and Raydan (2006).  
+R adaptation, with significant modifications, by Ravi Varadhan, Johns Hopkins 
+University (March 25, 2008), from the original FORTRAN code of La Cruz, 
+Martinez, and Raydan (2006) 
+available at \url{http://kuainasi.ciens.ucv.ve/ccct/mraydan/mraydan.html}.  
 
 A major modification in our R adaptation of the original FORTRAN code is the availability of 3 different options for Barzilai-Borwein (BB) steplengths: \code{method = 1} is the BB 
 steplength used in LaCruz, Martinez and Raydan (2006);  \code{method = 2} is equivalent to the other steplength proposed in Barzilai and Borwein's (1988) original paper.  
@@ -84,7 +87,10 @@ the L2-norm of \code{fn} is printed at every 10-th iteration.}
 
    L Grippo, F Lampariello, and S Lucidi (1986),  A nonmonotone line search technique for Newton's method,  \emph{SIAM J on Numerical Analysis}, 23, 707-716. 
 
-   W LaCruz, JM Martinez, and M Raydan (2006),  Spectral residual method without gradient information for solving large-scale nonlinear systems of equations, \emph{Mathematics of Computation}, 75, 1429-1448. 
+   W LaCruz, JM Martinez, and M Raydan (2006),  Spectral residual method 
+   without gradient information for solving large-scale nonlinear systems of 
+   equations, \emph{Mathematics of Computation}, 75, 1429-1448
+   (see \url{http://kuainasi.ciens.ucv.ve/ccct/mraydan/mraydan.html}). 
 
    R Varadhan and C Roland (2008),  Simple and globally-convergent methods for accelerating the convergence of any EM algorithm,  \emph{Scandinavian J Statistics}, doi: 10.1111/j.1467-9469.2007.00585.x. 
 
