@@ -21,6 +21,18 @@ vec <- 1:n
 vec * (exp(x) - 1) / 10
 }
 
+neg.sc2.f <- function(x){
+n <- length(x)
+vec <- 1:n
+-sum(vec * (exp(x) - x)) / 10
+}
+
+neg.sc2.g <- function(x){
+n <- length(x)
+vec <- 1:n
+-vec * (exp(x) - 1) / 10
+}
+
 p0 <- runif(500,min=-1, max=1)
 system.time(ans.spg <- spg(par=p0, fn=sc2.f, control=list(maxit=2500)))[1]
 
@@ -39,6 +51,14 @@ good <- 2.565413040899874e-06
 #on Linux64 6.677493403589264e-05
 print(z, digits=16)
 if(any(abs(good - z) >  1e-4)) stop("BB test sc2 b FAILED")
+
+system.time(neg.ans.spg <- spg(par=p0, fn=neg.sc2.f, gr=neg.sc2.g,
+   control=list(maxit=2500, maximize=TRUE)))[1]
+
+z <- sum(neg.ans.spg$par)
+good <- 2.565413040899874e-06
+print(z, digits=16)
+if(any(abs(good - z) >  1e-4)) stop("BB test neg.sc2 b FAILED")
 
 system.time(ans.opt <- optim(par=p0, fn=sc2.f, method="L-BFGS-B"))[1]
 
