@@ -1,4 +1,9 @@
-           Changes in BB version 2008.x-1
+           Changes in BB version 2008.5-1
+  
+  o fix a references that was inaccurate and added web links to others.
+
+  o fix bug when maximizing a function with analytic gradient supplied, and add
+    a test of this.
 
   o changed the title (as appears on CRAN) to be more descriptive.
 
